# rem-treebank-annis

./: Cargo.toml  README.md  clippy.toml
src/: annis_util.rs  main.rs  rem.rs
src/inbound/: annis.rs  ttl.rs
src/outbound/: annis.rs
