[package]
name = "rem-treebank-annis"
version = "0.1.0"
authors = ["Matthias Stemmler <matthias.stemmler@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/matthias-stemmler/rem-treebank-annis"
rust-version = "1.80"
license = "Apache-2.0"
publish = false

[lints.rust]
elided_lifetimes_in_paths = "deny"
unreachable_pub = "deny"
unsafe_code = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
default_trait_access = "deny"
doc_markdown = "deny"
needless_pass_by_value = "deny"
semicolon_if_nothing_returned = "deny"
unnecessary_wraps = "deny"
use_debug = "deny"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
graphannis = "3.4.0"
graphannis-core = "3.4.0"
itertools = "0.13.0"
regex = "1.10.6"
rio_api = "0.8.5"
rio_turtle = "0.8.5"
tempfile = "3.12.0"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
zip = "2.2.0"
